--- a/04_Notebook_1.ipynb
+++ b/04_Notebook_1.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "18e77458",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Notebook 1: 2 Feature Analysis\n",
@@ -19,13 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "707faf38",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load data\n",
@@ -48,27 +40,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8dbf331e",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['27', 'F', 'No', 'No', 'No', 'Euthyroid',\n",
+       "       'Single nodular goiter-left', 'No', 'Micropapillary', 'Uni-Focal',\n",
+       "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "X[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d7d46227",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# converts string values into integers \n",
@@ -88,14 +85,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "403fd7ad",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PEARSON CORRELATIONS (ABS SORTED)\n",
+      "10    0.733376\n",
+      "15    0.708957\n",
+      "12    0.632323\n",
+      "11    0.556201\n",
+      "14    0.449137\n",
+      "9     0.383776\n",
+      "13    0.354360\n",
+      "2     0.333243\n",
+      "1     0.328189\n",
+      "0     0.257659\n",
+      "7     0.182530\n",
+      "4     0.174407\n",
+      "3     0.136073\n",
+      "6     0.131801\n",
+      "5     0.067758\n",
+      "8     0.003272\n",
+      "dtype: float64\n",
+      "\n",
+      "Top 2 features: [10, 15]\n",
+      "Top 5 features: [10, 15, 12, 11, 14]\n",
+      "Top 10 features: [10, 15, 12, 11, 14, 9, 13, 2, 1, 0]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# convert to pandas so correlation works\n",
     "X_df = pd.DataFrame(X)\n",
@@ -122,13 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d7d61b42",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -144,14 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3e816627",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2. 2.]\n",
+      "Shape X: (383, 2)\n",
+      "Shape y: (383,)\n",
+      "Shape X: (2, 2)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# basic printing and shape checking to confirm dataset size\n",
     "print(X[0])\n",
@@ -165,14 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "98f4b1a0",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "QSVC accuracy: 0.948051948051948\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "# MODEL 1: QSVC + QuantumKernel (main baseline model)\n",
@@ -201,14 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2dc78e18",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 0.42685961723327637 seconds\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# this measures how long it takes to train the QSVC model\n",
     "# DOES NOT AFFECT ACCURACY\n",
@@ -222,14 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1031a3da",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical SVC (RBF) accuracy: 0.974025974025974\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 2: Classical SVC (RBF baseline)\n",
     "# this is the normal, classical SVC\n",
@@ -246,14 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8ab9e09d",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Callable SVC + Quantum Kernel accuracy: 0.948051948051948\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
     "# the classical SVC calls the quantum kernel during training\n",
@@ -269,14 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4c070db6",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precomputed SVC + Quantum Kernel accuracy: 0.948051948051948\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 4: Classical SVC using precomputed Quantum Kernel\n",
     "# SVC + QuantumTrainableKernel (Precomputed)\n",
@@ -296,13 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cfd7c94f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# MODEL 5: Trainable Quantum Kernel\n",
@@ -340,14 +383,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1cf690bc",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌──────────┐     ┌──────────────────────────┐\n",
+      "q_0: ┤ Ry(θ[0]) ├──■──┤0                         ├\n",
+      "     ├──────────┤┌─┴─┐│  ZZFeatureMap(x[0],x[1]) │\n",
+      "q_1: ┤ Ry(θ[1]) ├┤ X ├┤1                         ├\n",
+      "     └──────────┘└───┘└──────────────────────────┘\n",
+      "Trainable parameters: θ, ['θ[0]', 'θ[1]']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5018/4258738323.py:28: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
+      "  sampler = Sampler()\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
     "\n",
@@ -404,14 +464,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "13f2d19a",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training trainable quantum kernel on subset...\n",
+      "{   'optimal_circuit': None,\n",
+      "    'optimal_parameters': {   ParameterVectorElement(θ[0]): np.float64(0.0993163067086189),\n",
+      "                              ParameterVectorElement(θ[1]): np.float64(3.0570385939943603)},\n",
+      "    'optimal_point': array([0.09931631, 3.05703859]),\n",
+      "    'optimal_value': np.float64(8.713190490320287),\n",
+      "    'optimizer_evals': 45,\n",
+      "    'optimizer_result': None,\n",
+      "    'optimizer_time': None,\n",
+      "    'quantum_kernel': <qiskit_machine_learning.kernels.trainable_fidelity_quantum_kernel.TrainableFidelityQuantumKernel object at 0x70f5e00c3980>}\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# SECTION 2 — Subset + Training Trainable Kernel\n",
     "\n",
@@ -429,14 +502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6e12ea52",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trainable kernel QSVC test accuracy: 0.895\n",
+      "Hybrid SVC (precomputed optimal kernel) test score: 0.909\n",
+      "Precomputed kernel classification test score: 0.909\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
     "\n",
@@ -504,8 +583,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
