--- a/04_Notebook_3.ipynb
+++ b/04_Notebook_3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd540b59",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e31ea780",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "094927e3",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "603a78d3",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 2.07167387008667 seconds\n"
+      "Training took 2.054503917694092 seconds\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ea2274dc",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a46a28fc",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_565/3379643469.py:28: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
+      "/tmp/ipykernel_4938/3379643469.py:28: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
       "  sampler = Sampler()\n"
      ]
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f7ed35e5",
    "metadata": {},
    "outputs": [
@@ -498,25 +498,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training trainable quantum kernel on subset...\n",
-      "{   'optimal_circuit': None,\n",
-      "    'optimal_parameters': {   ParameterVectorElement(θ[0]): np.float64(2.8244651029596697),\n",
-      "                              ParameterVectorElement(θ[1]): np.float64(2.9490119764641967),\n",
-      "                              ParameterVectorElement(θ[2]): np.float64(1.1942386996881018),\n",
-      "                              ParameterVectorElement(θ[3]): np.float64(3.105640843779657),\n",
-      "                              ParameterVectorElement(θ[4]): np.float64(0.42595351842058804),\n",
-      "                              ParameterVectorElement(θ[5]): np.float64(0.8094485557051567),\n",
-      "                              ParameterVectorElement(θ[6]): np.float64(1.6146677479359137),\n",
-      "                              ParameterVectorElement(θ[7]): np.float64(3.293470544084122),\n",
-      "                              ParameterVectorElement(θ[8]): np.float64(1.5035600889429486),\n",
-      "                              ParameterVectorElement(θ[9]): np.float64(4.09886989067085)},\n",
-      "    'optimal_point': array([2.8244651 , 2.94901198, 1.1942387 , 3.10564084, 0.42595352,\n",
-      "       0.80944856, 1.61466775, 3.29347054, 1.50356009, 4.09886989]),\n",
-      "    'optimal_value': np.float64(13.5513752501595),\n",
-      "    'optimizer_evals': 45,\n",
-      "    'optimizer_result': None,\n",
-      "    'optimizer_time': None,\n",
-      "    'quantum_kernel': <qiskit_machine_learning.kernels.trainable_fidelity_quantum_kernel.TrainableFidelityQuantumKernel object at 0x764fce0308c0>}\n"
+      "Training trainable quantum kernel on subset...\n"
      ]
     }
    ],
@@ -537,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "32bc52fe",
    "metadata": {},
    "outputs": [
@@ -614,6 +596,53 @@
     "# evaluate accuracy on test set\n",
     "pre_score = svc_pre.score(K_test, y_test_small)\n",
     "print(f\"Precomputed kernel classification test score: {pre_score:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f369f7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SECTION 4 — Visualize the Kernel Training Process\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "import numpy as np\n",
+    "\n",
+    "# 1️. plot loss evolution from the callback\n",
+    "plot_data = cb_qkt.get_callback_data()  # callback data from SPSA optimizer\n",
+    "\n",
+    "plt.rcParams[\"font.size\"] = 14\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(14, 5))\n",
+    "\n",
+    "# loss vs iterations\n",
+    "ax[0].plot([i + 1 for i in range(len(plot_data[0]))], np.array(plot_data[2]), c=\"k\", marker=\"o\")\n",
+    "ax[0].set_xlabel(\"Iterations\")\n",
+    "ax[0].set_ylabel(\"Loss\")\n",
+    "ax[0].set_title(\"Kernel Training Loss\")\n",
+    "\n",
+    "# kernel matrix heatmap\n",
+    "K = optimized_kernel.evaluate(X_small)  # or X_train_small\n",
+    "im = ax[1].imshow(K, cmap=matplotlib.colormaps[\"bwr\"])\n",
+    "ax[1].set_title(\"Final Kernel Matrix\")\n",
+    "fig.colorbar(im, ax=ax[1], fraction=0.046, pad=0.04)\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 2️. display Qiskit version and installed packages\n",
+    "import qiskit\n",
+    "import pkg_resources\n",
+    "\n",
+    "print(\"Main Qiskit version:\")\n",
+    "print(qiskit.__version__)\n",
+    "\n",
+    "print(\"\\nInstalled Qiskit packages:\")\n",
+    "for pkg in pkg_resources.working_set:\n",
+    "    if \"qiskit\" in pkg.key:\n",
+    "        print(pkg.key, pkg.version)"
    ]
   }
  ],
